--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+@font-face {
+    font-family: 'Pretendard';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
+    font-style: normal;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +16,130 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0px;
+  font-family: Pretendard;
+}
+
+.h1 {
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 173%;
+}
+
+.label {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.primary-button {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 8px 24px;
+
+  background-color: rgba(28, 87, 232, 1);
+  border-radius: 6px;
+
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 175%;
+
+  color: rgba(255, 255, 255, 1);
+}
+
+.second-button {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 8px 24px;
+
+  background-color: rgba(58, 87, 232, 0.2);
+  border-radius: 6px;
+
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 175%;
+
+  color: rgba(45, 66, 178, 1);
+}
+
+.second-button:hover {
+  cursor: pointer;
+  opacity: 0.85;
+}
+
+.disable-button {
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  padding: 8px 24px;
+
+  background-color: rgba(138, 146, 166, 1);
+  border-radius: 6px;
+
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 175%;
+
+  color: rgba(255, 255, 255, 1);
+}
+
+.primary-button:hover {
+  cursor: pointer;
+  opacity: 0.85;
+}
+
+.sns-button {
+  width: 56px;
+  height: 56px;
+  border-radius: 56px;
+}
+
+.sns-button:hover {
+  cursor: pointer;
+  opacity: 0.9;
+}
+
+.text-link {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 175%;
+
+  color: rgba(113, 113, 113, 1);
+}
+
+.text-link:hover {
+  cursor: pointer;
+  opacity: 0.85;
+}
+
+.short-divider {
+  width: 64px;
+  border: 1px solid rgba(238, 238, 238, 1);
+}
+
+.full-width {
+  width: 100%;
+}
+
+.primary {
+  color: rgba(58, 87, 232, 1);
+}
+
+.error {
+  color: rgba(255, 84, 62, 1);
 }
