--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     font-style: normal;
 }
 
-body {
+.body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
